# temp-abaca

./: .env-example  .env.render  .gitignore  Dockerfile  Readme.md  aldryn-celery-script.sh  celerybeat-schedule  deploy.sh  docker-compose.yml  init-mock-database.sh  package.json  pyproject.toml  render.yaml  requirements.txt  ruff.toml  settings.py  setup.sh  supporters.csv  tasks.py  urls.py
capital_explorer/: __init__.py  admin.py  apps.py  models.py  permissions.py  schema.py  serializers.py  signals.py  urls.py  views.py
company_lists/: __init__.py  admin.py  apps.py  mixins.py  permissions.py  signals.py  urls.py  views.py
docs/: AFFILIATES.md  AFFILIATE_SUBMISSIONS.md  CAPITAL_EXPLORER.md  COMPANY_LISTS.md  MATCHING.md  MILESTONE_PLANNER.md  PROJECT_SETUP.md  REPORTS.md  SUBSCRIPTIONS.md  TEAM_MEMBERS.md  TECH_STACK.md  USERS_AUTHENTICATON.md
env_settings/: base.py  clone.py  dev.py  local.py  production.py  qa.py  staging.py
grid/: __init__.py  admin.py  apps.py  serializers.py  signals.py  translation.py  urls.py  utils.py  views.py
matching/: admin.py  algorithm.py  algorithm_supporters.py  apps.py  permissions.py  serializers.py  signals.py  translation.py  urls.py  utils.py  views.py
middlewares/: disablecsrf.py  vendor_middleware.py
milestone_planner/: __init__.py  admin.py  apps.py  permissions.py  signals.py  urls.py  views.py
profiles/: admin.py  forms.py  mixins.py  serializers.py  urls.py  views.py
sdg/: apps.py  urls.py
shared/: Typesense.py  __init__.py  admin.py  execute_raw_sql.py  execute_sql_in_thread.py  mixins.py  urls.py  (+4 more)
(+543 files in other folders)
